--- a/menjar/css/style.css
+++ b/menjar/css/style.css
@@ -7,61 +7,72 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
-  margin-top: 3.5rem;
-  margin-bottom: 1rem;
+  font-size: 48px;
+  margin-top: 56px;
+  margin-bottom: 16px;
+}
+
+.bg {
+  margin: 0 15%;
+}
+
+.bg_color {
+  background-color: #fff4e2;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 32px;
 }
 
 p {
-  font-size: 1.25rem;
-  line-height: 1.5rem;
+  font-size: 20px;
+  line-height: 24px;
 }
 
 header {
   background-color: #e7272d;
-  height: 7rem;
+  height: 112px;
   padding: 0.5rem 1rem;
-  border-radius: 0 0 1rem 1rem;
-  margin-top: -2.5rem;
+  border-radius: 0 0 16px 16px;
+  margin-top: -40px;
 }
 
 header div > img {
-  width: 4rem;
+  width: 64px;
 }
 
-/* section {
-    margin: 0 20%;
-} */
-
 article {
-  padding: 5rem 2rem;
+  padding: 80px 32px;
 }
 
 /* NAVIGATION SECTION */
 
 .nav {
-  padding: 0.3rem;
+  padding: 5px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   position: relative;
-  margin: 0 20%;
 }
 
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
+  background-color: #ffffff;
+}
+
+nav {
+  margin: 0 5rem;
 }
 
 .nav a {
   text-decoration: none;
-  font-size: 1.2rem;
-  padding: 0 1rem;
+  font-size: 1.5rem;
   color: white;
+}
+
+.nav-link {
+  padding: 0 1rem !important;
 }
 
 .nav a:hover {
@@ -79,11 +90,11 @@ nav li {
 
 .main_button {
   background-color: #e7272d;
-  padding: 0.7rem 1.5rem;
-  border-radius: 1.5rem;
+  padding: 0.7rem 2rem;
+  border-radius: 24px;
   border: 2px solid #e7272d;
   color: white;
-  font-size: 1.2rem;
+  font-size: 19px;
   font-weight: bold;
 }
 
@@ -93,31 +104,45 @@ nav li {
   border: 2px solid #e7272d;
 }
 
+.main_button_inverse {
+  background-color: #ffffff;
+  padding: 0.7rem 2rem;
+  border-radius: 24px;
+  border: 2px solid #ffffff;
+  color: #e7272d;
+  font-size: 19px;
+  font-weight: bold;
+}
+
+.main_button_inverse:hover {
+  background-color: #e7272d;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+}
+
 .cart {
-  width: 1.3rem;
+  width: 21px;
+  margin-left: 1rem;
 }
 
 /* HERO SECTION */
 
-.hero_section {
-  margin: 5rem 20%;
-  color: white;
-}
-
 .hero_section_main {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero_sub {
   color: #e7272d;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 32px;
 }
 
 .hero_heading {
   font-size: 6rem;
   font-weight: 900;
-  line-height: 5rem;
+  line-height: 72px;
   margin-top: 1rem;
 }
 
@@ -139,21 +164,15 @@ nav li {
   display: flex;
   justify-content: space-around;
   background-color: #e7272d;
-  border-radius: 1rem;
-  padding: 3rem 1rem;
-  margin: -15rem 0 0 0;
+  border-radius: 16px;
+  padding: 48px 16px;
+  /* margin: -160px 0 0 0; */
 }
 
 /* WELCOME SECTION */
 
 #about_us {
   background-color: #ffffff;
-  color: black;
-}
-
-.about_us {
-  margin: 0 20%;
-  display: flex;
 }
 
 .about_us h1 {
@@ -179,13 +198,9 @@ nav li {
   background-color: #fff4e2;
 }
 
-.special_combo {
-  margin: 0 20%;
-  text-align: center;
-}
-
 .combos {
   display: flex;
+  flex-wrap: nowrap;
   margin-top: 4rem;
 }
 
@@ -244,11 +259,6 @@ nav li {
 
 #menu {
   background-color: #ffffff;
-}
-
-.menu {
-  margin: 0 20%;
-  text-align: center;
 }
 
 .accordion {
@@ -356,15 +366,17 @@ nav li {
   height: 500px;
   margin-bottom: -500px;
   margin-right: 0;
-  padding: 30px;
+  padding: 2rem;
   width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: left;
 }
 
 .menu_box {
-  margin-right: 1rem;
-  margin-left: 1rem;
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .menu_items h5 {
@@ -401,7 +413,197 @@ nav li {
   width: 80%;
 }
 
+/* DELIVERY SECTION */
+
+#delivery {
+  background-color: #fff4e2;
+}
+
+.delivery_main {
+  text-align: left;
+  padding: 0;
+}
+
+.delivery_img {
+  text-align: center;
+  margin: 0;
+}
+
+.delivery_img_main {
+  padding-top: 5rem;
+  margin-left: 1rem;
+  width: 20rem;
+}
+
+.delivery_img_main:hover {
+  transform: translateX(-40px);
+  transition: transform 3s;
+}
+
+.reward {
+  text-align: right;
+}
+
+/* TESTIMONIAL SECTION */
+
+#testimonial {
+  background-color: #ffffff;
+}
+
+.testimonial {
+  display: flex;
+  height: 60vh;
+}
+
+.testimonial_main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%vh;
+}
+
+.testimonial_img {
+  width: 20rem;
+  height: 20rem;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+/* .testimonial_info {
+  padding-left: 5rem;
+  margin: auto;
+  width: 40%;
+} */
+
+.testimonial_info img {
+  width: 25%;
+}
+
+/* FOOD GALLERY SECTION */
+
+.gallery_img {
+  display: flex;
+}
+
+.gallery_img_main {
+  padding: 1rem 1rem;
+  width: 15rem;
+  height: 15rem;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+/* CONTACT US section */
+
+.contact_name input,
+textarea {
+  border: 1px solid rgba(231, 39, 45, 0.5);
+  border-style: none none solid;
+  width: 100%;
+}
+
+input:focus {
+  border: 2px solid rgba(231, 39, 45, 1);
+  border-style: none none solid;
+}
+
+form {
+  font-size: 1.4rem;
+}
+
+.contact_main {
+  padding-top: 4rem;
+}
+
+.contact_address {
+  background-color: #e7272d;
+  border-radius: 1rem;
+  padding: 3rem 2rem;
+}
+
+.contact_info {
+  padding: 3rem 2rem;
+}
+
+.contact_details {
+  padding-top: 1.5rem;
+}
+
+.contact_help {
+  padding-top: 3rem;
+}
+
+.contact_des {
+  display: flex;
+  padding-bottom: 3rem;
+}
+
+.contact_des input {
+  margin: 0 0.5rem;
+}
+
+.contact_des label {
+  margin-right: 1.5rem;
+}
+
+/* RESERVATION SECTION */
+
+.reservation {
+  padding-top: 4rem;
+}
+
+.reservation_form {
+  padding-top: 2rem;
+}
+
+.reservation_form form {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 4rem 2rem;
+  background-color: #e7272d;
+  border-radius: 2rem;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.form_item input {
+  border: 1px solid rgba(231, 39, 45, 1);
+  border-style: none none solid;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  width: 100%;
+}
+
+/* FOOTER SECTION */
+
+.footer_section {
+  display: block;
+}
+
+.footer_section i {
+  padding-right: 0.5rem;
+}
+
+.footer a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: white;
+}
+
+.footer a:hover {
+  color: #e7272d;
+}
+
+.copyright {
+  padding-top: 3rem;
+}
+
 @media only screen and (max-width: 600px) {
+  .bg {
+    margin: 0;
+  }
+
   .about_us {
     display: block;
     margin: 0 0;
@@ -421,13 +623,14 @@ nav li {
   }
 
   .hero_section {
-    margin: 0 0;
+    margin: 0;
     display: block;
   }
 
   .hero_section_main {
     display: block;
     text-align: center;
+    margin-bottom: 0;
   }
 
   .hero_sub {
@@ -445,11 +648,18 @@ nav li {
 
   .hero_box {
     margin: 0;
+    display: block;
   }
 
-  .nav {
-    margin: 0;
+  .hero_box_item {
+    justify-content: center;
+    align-items: center;
+    padding: 0;
   }
+
+  /* .nav {
+    margin: 0;
+  } */
 
   .order {
     display: none;
@@ -459,9 +669,9 @@ nav li {
     display: block;
   }
 
-  .special_combo {
+  /* .special_combo {
     margin: 0;
-  }
+  } */
 
   .combo_heading {
     font-size: 2.5rem;
@@ -471,9 +681,9 @@ nav li {
     margin-top: 1rem;
   }
 
-  .menu {
+  /* .menu {
     margin: 0;
-  }
+  } */
 
   .accordion-content {
     display: block;
@@ -491,7 +701,13 @@ nav li {
   }
 
   .menu_items p {
-    width: 100%;
+    width: 95%;
+    margin: auto;
+  }
+
+  .menu_items h4 {
+    width: 80%;
+    margin: auto;
   }
 
   .menu_items h5 {
@@ -502,5 +718,73 @@ nav li {
   .menu_price {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     padding-bottom: 1rem;
+  }
+
+  /* .delivery {
+    display: block;
+    margin: 0;
+  } */
+
+  .delivery_main {
+    text-align: center;
+    padding: 0;
+  }
+
+  .reward {
+    text-align: center;
+    padding: 1.5rem 0 0;
+  }
+
+  .delivery_img {
+    margin: 0;
+  }
+
+  .delivery_img_main {
+    position: inherit;
+    width: 15rem;
+    padding: 3rem 0;
+  }
+
+  .testimonial {
+    margin: 0;
+    height: 70vh;
+  }
+
+  .testimonial_main {
+    display: block;
+  }
+
+  .testimonial_info {
+    padding: 1rem 0;
+    text-align: center;
+    width: 100%;
+  }
+
+  .testimonial_img {
+    width: 10rem;
+    height: 10rem;
+    margin: 0 auto;
+  }
+
+  .testimonial_info img {
+    width: 10%;
+  }
+
+  .t_img {
+    display: grid;
+    margin: 0 auto;
+  }
+
+  .contact_des {
+    display: block;
+  }
+
+  .reservation_form form {
+    display: block;
+    width: 100%;
+  }
+
+  .form_item {
+    padding-bottom: 1.5rem;
   }
 }
