Fixed Deformation bug

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -35,7 +35,7 @@
 <input type="submit">
 </form>
 
-<a href="/remove"><h3>Click here to remove a meal item</h3></a>
+<a href="/manageMeals"><h3>Click here to remove a meal item</h3></a>
 
 <h2>Add New Category:</h2> 
 <p>Category Name:</p>
