--- a/menjar/back up/style2.css
+++ b/menjar/back up/style2.css
@@ -13,7 +13,6 @@ body {
     background-color: #fff4e2;
 }
 
-
 h2 {
     font-size: 32px;
 }
@@ -25,7 +24,7 @@ p {
 
 header {
     background-color: #e7272d;
-    padding: 2rem 1rem 0.5rem 1rem;
+    padding: 0.5rem 1rem;
     border-radius: 0 0 16px 16px;
     margin-top: -55px;
 }
@@ -44,12 +43,11 @@ article {
 }
 
 .nav_bg {
-    position: fixed;
-    width: 100%;
+    position: sticky;
     top: 0;
     background-color: #fbbe36;
+    z-index: 1;
     padding: 1rem;
-    z-index: 99999;
 }
 
 .nav {
@@ -58,6 +56,11 @@ article {
     justify-content: space-between;
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 50%;
+}
 
 nav {
     margin: 0 5rem;
@@ -118,31 +121,6 @@ nav li {
 .cart {
     width: 21px;
     margin-left: 1rem;
-}
-
-.modal {
-    z-index: 100000;
-}
-
-/* FIXED BUTTON */
-.myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  border: none; /
-  outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 5px 10px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
-}
-
-.myBtn:hover {
-  background-color: #fbbe36; /* Add a dark-grey background on hover */
 }
 
 /* HERO SECTION */
@@ -458,6 +436,10 @@ nav li {
     color: #333;
 }
 
+.cart_body {
+    background-color: #ffffff;
+    border-radius: 1rem;
+}
 
 .cart-column {
     display: flex;
@@ -842,9 +824,9 @@ footer div>img {
     /* .nav {
     margin: 0;
   } */
-    /* .order {
+    .order {
         display: none;
-    } */
+    }
 
     .combos {
         display: block;
