--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
                                     </div>
 
                                     <div class="text-center">
-                                        <button class="btn main_button btn-lg" type="submit" name="button">Sign Up</button>
+                                        <button class="btn main_button btn-lg" onclick="success()"type="submit" name="button">Sign Up</button>
 
                                     </div>
                                 </form>
